<resources>
    <string name="app_name">ARUS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ARUS</string>
    <string name="nav_header_subtitle">Menú principal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Titulo de los fragmentos del menú -->
    <string name="contenedor1">Conoce las 3R</string>
    <string name="contenedor2">Desechos Normales</string>
    <string name="contenedor3">Desechos Especiales</string>
    <string name="contenedor4">Zonas de Horarios</string>
    <string name="contenedor5">Ubicación de Reciclado</string>
    <string name="contenedor6">Sistema Urbano de Reciclaje y Aseo</string>


    <!-- TODO: formulario -->
    <string name="contenedor7">Solicitud de Recoleción de Desechos</string>
    <string name="contenedor8">Formulario de Desechos Residenciales</string>
    <string name="formu">Por este medio del presente formulario deseo solicitar la recolección de deschos:</string>
    <string name="nombre">Nombre Completo: </string>
    <string name="num">Número de Cliente: </string>
    <string name="tel">Teléfono: </string>
    <string name="tipo">Tipo de Desecho: </string>
    <string name="cant">Cantidad de Desecho: </string>
    <string name="dir">Dirección: </string>

    <!-- TODO: SPINNER DE TIPO DE DESCHO-->
    <string-array name="tipo">
        <item>Tipos de Desecho </item>
        <item> Residuos de construcción y demolición</item>
        <item>Vehículos y neumáticos fuera de uso</item>
        <item> Residuos agrarios</item>
    </string-array>




    <!-- Parrafo de 3R -->
    <string name="tresR"> La regla de las tres erres, también conocida como las tres erres de la ecología, o simplemente 3R, es una propuesta sobre hábitos de consumo promovidos por la organización ecologista Greenpeace.
      \n\n Las 3R son: Reducir, Reutilizar y Reciclar. Estas hacen referencia a estrategias para manejar residuos de forma más sustentables con el medio ambiente, y reducir la cantidad de residuos generados.
    </string>

    <string name="reducir"> <b>Reducir</b> </string>
    <string name="red"> La reducción puede realizarse en dos niveles: reducción del consumo de bienes o de energía. Algunas formas de reducir el consumo de estos son:
        \n\n\t\t• Reducir o eliminar la cantidad de materiales destinados de uso único, como los embalajes.
    \n\n\t\t• Utilizar aparatos electrodomésticos de forma eficiente, por ejemplo, poner lavadoras y secadoras llenas y no a media carga.
     \n\n\t\t•	Reducir pérdidas energéticas o de recursos, como desconectar los aparatos eléctricos que no estén en uso, cerrar los grifos mientras se friegan los utensilios de cocina, utilizar un vaso con agua para lavarse los dientes, etc.
     \n\n\t\t•	Utilizar bolsas de telas en vez de plástico para realizar las compras.
     \n\n\t\t•	Manejar documentos de forma digital cuando sea posible, para disminuir la cantidad de papel consumida.
    </string>

    <string name="reutilizar"> <b>Reutilizar</b>  </string>

    <string name="reu"> Consiste en darle una segunda vida útil a los objetos, a través de la reparación o adaptación de los mismos para un uso diferente. \nEjemplos:
\n\n\t\t•	Utilizar la otra cara de hojas impresas, o imprimir en ambas caras.
\n\n\t\t•	Rellenar botellas en lugar de desecharlas.
\n\n\t\t•	Teñir prendas de ropa que tengan manchas y emparchar o zurcir las que tengan rupturas.
\n\n\t\t•	Utilizar los envases de plástico de productos que se han terminado, para guardar otras cosas.
</string>

    <string name="reciclar"> <b>Reciclar</b></string>

    <string name="reci">
Esta es una de las erres más populares, ya que el sistema de consumo actual ha adoptado el uso de envases de materiales reciclables (plásticos y Tetra Pak, sobre todo), pero no biodegradables.
        \nEjemplo:
\n\n\t\t•	El vidrio y la mayoría de plásticos se pueden reciclar. En fábricas, estos materiales se calientan hasta fundirse o derretirse y luego se les da una nueva forma.
\n\n\t\t•	El papel es transformado en pulpa para generar otros materiales similares.
\n\n\t\t•	En la página http://www.inforeciclaje.com/ se brinda una guía detallada del reciclaje de otros materiales.

 </string>

    <!-- Parrafo de Desechos Normales -->
    <string name="DesechosNormales"> <b>Residuos Domésticos</b> </string>
    <string name="residuo">Los residuos domésticos, también llamados residuos sólidos urbanos, son un tipo de residuo que incluye principalmente basura doméstica y, esporádicamente, productos industriales. Casi siempre son sólidos, algunas veces líquidos (pinturas, productos de limpieza, etc.), y raras veces, gaseosos (humo de chimeneas).
\n\nLos desechos sólidos, a su vez, se pueden organizar en 5 categorías:
        \n\n•   <b>Biodegradables:</b> Son sobras de alimentos y similares, que no se consideran contaminantes, porque se degradan rápidamente.
        \n\n•	<b>Reciclables:</b> Constituyen los materiales que pueden ser separados para el reciclaje. Entre los principales, tenemos papel, cartón, vidrio, envases plásticos y otros.
        \n\n•	<b>Inertes:</b> Son aquellos residuos de la limpieza y construcción, como polvo, piedras, bloques y ladrillos.
        \n\n•	<b>Compuestos:</b> Generalmente son prendas de vestir y algunos juguetes plásticos.\n•	Peligrosos: Pueden representar un riesgo para la salud y/o el medio ambiente, debido a su composición química. Principalmente son medicamentos, electrodomésticos, fertilizantes, plaguicidas, baterías, pinturas, productos de limpieza, productos para automóviles.
    </string>
    <string name="dese">Los desechos peligrosos son difíciles de controlar porque se generan en poca cantidad, pero en muchos lugares. A pesar de esto, se pueden manejar de varias formas:
        \n\n•	<b>Reutilización: </b> de productos como la pintura.
        \n\n•	<b>Reciclaje:</b> hasta el 80% de la pintura recogida puede ser mezclada y reprocesada para su uso; de las baterías se pueden recuperar algunos metales.
        \n\n•	<b>Recuperación:</b> los disolventes y diluyentes de las pinturas pueden ser tamizados y mezclados, formando así un compuesto combustible; el aceite de motor usado puede ser recogido para procesarse nuevamente.
        \n\n•	<b>Eliminación segura:</b> para algunos productos, la mejor opción es la eliminación o almacenaje, como es el caso de los pesticidas o las pilas (sólo posible en algunos países).

    </string>
    <string name="DesechosPeligrosos"> <b>Residuos Peligrosos</b> </string>
    <!--Parrafo de desechos especiales-->
    <string name="DesechosEspeciales">
Son residuos que requieren la adopción de medidas de prevención especiales durante la recogida, el almacenamiento, el transporte, el tratamiento y la deposición del rechazo, tanto dentro como fuera del centro generador, ya que (sin llegar a ser considerados como residuos peligrosos) pueden presentar un riesgo para la salud laboral y pública.
\n\n\t\t\t1. Residuos de construcción y demolición
\n\t\t\t2. Residuos clínicos o sanitarios
\n\t\t\t3. Vehículos y neumáticos fuera de uso
\n\t\t\t4. Lodos de depuradoras
\n\t\t\t5. Residuos agrarios
\n\t\t\t6. Residuos forestales
\n\t\t\t7. Residuos mineros
</string>

    <!-- TODO: ZONAS HORARIOS DE LA BASURA-->
    <string-array name="h_zonas">
        <item>Zona A</item>
        <item>Zona B</item>
        <item>Zona C</item>
        <item>Zona D</item>
        <item>Zona E</item>
    </string-array>

    <!-- TODO: Titulo Zona Horario -->
    <string name="descripcion">Rutas de Recolección de la Autoridad de Aseo en el Turno Diurno</string>


    <!--TODO: FRAGMENT 6 INFO PRINCIPAL-->
    <string name="mision">Misión</string>
    <string name="visión">Visión</string>
    <string name="cont1">
      Dar a conocer las reglas de como se tiene que reutilizar los desechos que
        utilizamos y proveer las ubicaciones y horarios donde se encuentran los centros
        de reutilizacion, los horarios de la AAUD y los distintos tipos de residuos.
    </string>
    <string name="cont2">
         ARUS quiere mejorar la calidad de vida de la población
        fortalecimiento la conciencia, cultura ambiental y
        activa participación de todos los sectores de la sociedad.
    </string>
    <string name="valores">Valores</string>
    <string name="cont3">Responsabilidad Ambiental:
      deber de cada ciudadano proteger y mantener su
        ambiente en beneficio de sí mismo.\n\n
        Participación ambiental: colaborar y ayudar en programas o campañas ambientales.\n\n
        Sensibilidad ambiental: consideración y compasión ante los problemas que presenta el medio ambiente.\n\n
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_zona_b">ZonaBActivity</string>
    <string name="title_activity_zona_c">ZonaCActivity</string>
    <string name="title_activity_zona_d">ZonaDActivity</string>
    <string name="title_activity_zona_e">ZonaEActivity</string>
    <string name="title_activity_zonas_">Zonas_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_maps">Map</string>


    <!-- fragmento 4 descripcion-->
    <string name="des4">Aquí podrás encontrar los centros de reciclaje que hay en la ciudad
    de Panamá con los Botes autorizados del municipio para depositar tus desechos de reciclaje en los
    puntos más cerca de tu hogar.</string>

    <string name="des5">Dar click a la imagen</string>
    <string name="link_for">Dar click en el círculo verde para llenar el formulario de desechos residenciales</string>
    <string name="fo">Formulario de Desechos Residenciales</string>

</resources>