<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.Fragment2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contenedor2"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/deschos" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/naranja"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/DesechosNormales"
            android:textAlignment="inherit"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/residuo"
            android:textSize="16dp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:src="@drawable/resi_dome" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rojo"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/DesechosPeligrosos"
            android:textAlignment="inherit"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/dese"
            android:textSize="16dp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ambiente" />


    </LinearLayout>
    </ScrollView>
</FrameLayout>