<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formulario">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginLeft="81dp"
        android:layout_marginRight="75dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="16dp"
        android:text="@string/contenedor6"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="81dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="81dp"
        android:text="@string/contenedor7"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginStart="69dp"
        android:text="@string/contenedor8"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="137dp"
        android:layout_height="29dp"
        android:layout_marginTop="31dp"
        android:text="@string/nombre"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="132dp"
        android:layout_height="29dp"
        android:layout_marginTop="22dp"
        android:text="@string/num"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/tel"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="129dp"
        android:layout_height="25dp"
        android:layout_marginTop="26dp"
        android:text="@string/tipo"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="168dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/cant"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="122dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:text="@string/dir"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/formu"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="206dp"
        android:layout_height="47dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginEnd="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="20dp"
        android:text="Enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>