<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.Fragment5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contenedor5"
                android:textAlignment="center"
                android:textSize="30dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:background="#fffefe"
                android:cropToPadding="true"

                android:src="@drawable/buscar"
                android:translationY="10dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/des5"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                android:text="@string/des4"
                android:textSize="20dp" />


        </LinearLayout>

    </ScrollView>



</FrameLayout>